Changed Proxi's ref && removed useless comments

--- a/resume.tex
+++ b/resume.tex
@@ -30,19 +30,18 @@
 % Education Section
 \section*{ÉDUCATION}
 \noindent
-\textbf{CEGEP de Granby}, 235 Rue St-Jaques, Granby, QC \hfill Début: Août 2022 | Fin prévue :  Mai 2025\\ % University name and location
-Technique de l'informatique \hfill \\ % Degree 
+\textbf{CEGEP de Granby}, 235 Rue St-Jaques, Granby, QC \hfill Début: Août 2022 | Fin prévue :  Mai 2025\\ 
+Technique de l'informatique \hfill \\ 
 
 
 % Experience Section
 \section*{EXPÉRIENCES}
 \noindent
-\textbf{Les Surfaces Carpell Inc.} \hfill Granby, QC\\ % Company name and location
-\textit{Stagiaire aux Opérations} \hfill Avril 2022 - Août 2022 \\ % Position and duration
+\textbf{Les Surfaces Carpell Inc.} \hfill Granby, QC\\
+\textit{Stagiaire aux Opérations} \hfill Avril 2022 - Août 2022 \\ 
 \textit{Reference : } \hfill Eric Gervais - (514) 743-4669
 
 \begin{itemize}
-    % Job responsibilities
     \item Assister dans tous les aspects de la gestion de projet
     \item Logistique de chanier
     \item Scan préliminaire de documents d'appel d'offre
@@ -50,33 +49,33 @@ Technique de l'informatique \hfill \\ % Degree
 
 % Additional Experience 
 \noindent
-\textbf{Proxi Extra} \hfill 373 Rue Dufferin, Granby QC\\ % Project or organization name and location
-\textit{Commis de caisse} \hfill Mars 2020 – Avril 2022 \\% Position and duration
-\textit{Réference : } \hfill Sylvain Barré - +1 438-324-0179 % Position and duration
+\textbf{Proxi Extra} \hfill 373 Rue Dufferin, Granby QC\\ 
+\textit{Commis de caisse} \hfill Mars 2020 – Avril 2022 \\
+\textit{Réference : } \hfill Martin Proux - (450) 375-6682 
 
 \begin{itemize}
     \item Tenir la caisse
     \item Répondre aux clients
     \item Garnir les étagères
-    % Responsibilities 
 \end{itemize}
 
 % Projects Section
 \section*{PROJETS}
 \noindent
-\textbf{Concours de l'AMQ} \hfill Granby, QC\\ % Project name and location
-\textit{Site Web:} \url{https://www.amq.math.ca/concours/} \hfill % Project link and duration
+\textbf{Concours de l'AMQ} \hfill Granby, QC\\ 
+\textit{Site Web:} \url{https://www.amq.math.ca/concours/} \hfill 
 \begin{itemize}
     \item Candidat pour représenter le CEGEP de Granby pour l'édition 2024
 \end{itemize}
 
 \noindent
-\textbf{Odyssée de l'objet Édition 2019} \hfill Montréal, QC\\ % Project name and location
-\textit{Site Web:} \url{https://lodysseedelobjet.ca/} \hfill % Project link and duration
+\textbf{Odyssée de l'objet Édition 2019} \hfill Montréal, QC\\ 
+\textit{Site Web:} \url{https://lodysseedelobjet.ca/} \hfill 
 \begin{itemize}
     \item Première édition québecoise du concours de design industriel. 
     \item Coup de coeur des juges
 \end{itemize}
+
 % Skills Section
 \section*{COMPÉTENCES}
 \begin{itemize}
