added Carpell adress

--- a/resume.tex
+++ b/resume.tex
@@ -37,7 +37,7 @@ Technique de l'informatique \hfill \\
 % Experience Section
 \section*{EXPÉRIENCES}
 \noindent
-\textbf{Les Surfaces Carpell Inc.} \hfill Granby, QC\\
+\textbf{Les Surfaces Carpell Inc.} \hfill 745 rue Vadnais Granby, QC\\
 \textit{Stagiaire aux Opérations} \hfill Avril 2022 - Août 2022 \\ 
 \textit{Reference : } \hfill Eric Gervais - (514) 743-4669
 
