Update for college internships

--- a/resume.tex
+++ b/resume.tex
@@ -32,7 +32,7 @@
 \noindent
 \textbf{CEGEP de Granby}, 235 Rue St-Jaques, Granby, QC \hfill Début: Août 2022 | Fin prévue :  Mai 2025\\ 
 Technique de l'informatique \hfill \\ 
-
+\vspace{8mm}
 
 % Experience Section
 \section*{EXPÉRIENCES}
@@ -58,6 +58,7 @@ Technique de l'informatique \hfill \\
     \item Répondre aux clients
     \item Garnir les étagères
 \end{itemize}
+\vspace{8mm}
 
 % Projects Section
 \section*{PROJETS}
@@ -75,15 +76,18 @@ Technique de l'informatique \hfill \\
     \item Première édition québecoise du concours de design industriel. 
     \item Coup de coeur des juges
 \end{itemize}
+\vspace{8mm}
 
 % Skills Section
 \section*{COMPÉTENCES}
 \begin{itemize}
     \item \textbf{Cours complémentaires: } Phisique méchanique, Chimie générale, Chimie des solutions, Calcul Différentiel, Calcul Intégral, Algèbre Linéaire. 
-    \item \textbf{Programmation:} Java, Javascript, C\#
-    \item \textbf{Software:} Windows, Microsoft Office, Monday.com 
+    \item \textbf{Programmation:} Java, Javascript, Vue, C\#, ASP.NET Core, Entity Framework Core
+    \item \textbf{Software: } Windows, Linux, Git, Microsoft Office, Azure DevOps, Monday.com
+    \item \textbf{Méthodologie de travail: } Traditional Procurement, Agile(scrum)
     \item \textbf{Communication:} Français (écrit \& parlé), Anglais (écrit \& parlé) % Communication skills
 \end{itemize}
 
 % End document
 \end{document}
+
