Revise education, experience, and skills sections
Updated education and experience sections with new details and corrected formatting. Revised skills section to streamline programming languages and software listed.

--- a/resume.tex
+++ b/resume.tex
@@ -30,12 +30,30 @@
 % Education Section
 \section*{ÉDUCATION}
 \noindent
-\textbf{CEGEP de Granby}, 235 Rue St-Jaques, Granby, QC \hfill Début: Août 2022 | Fin prévue :  Mai 2025\\ 
+\textbf{CEGEP de Granby}, 235 Rue St-Jaques, Granby, QC \hfill Début: Août 2022 | Fin :  Mai 2025\\ 
 Technique de l'informatique \hfill \\ 
+\vspace{8mm}
+
+\noindent
+\textbf{Université Laval}, 2325 Rue de l'Université, Québec, QC G1V 0A6 \hfill Début: Septembre 2025 | Fin :  ---\\ 
+Baccalauréat intégré en mathématiques et informatique  \hfill \\ 
 \vspace{8mm}
 
 % Experience Section
 \section*{EXPÉRIENCES}
+
+\noindent
+\textbf{PHPCreation Inc.} \hfill 164 Rue Cowie #303, Granby, Québec J2G 3V3\\
+\textit{Stagiaire aux opérations} \hfill Janvier 2025 -- Décembre 2025\\
+\textit{Référence : } Simon Tremblay — (450) 776-5575
+
+\begin{itemize}
+    \item Développement d’une suite de tests automatisés
+    \item Garantie de la qualité des interfaces utilisateur
+    \item Participation au déploiement de projets et à la maintenance des environnements.
+\end{itemize}
+
+
 \noindent
 \textbf{Les Surfaces Carpell Inc.} \hfill 745 rue Vadnais Granby, QC\\
 \textit{Stagiaire aux Opérations} \hfill Avril 2022 - Août 2022 \\ 
@@ -81,13 +99,10 @@ Technique de l'informatique \hfill \\
 % Skills Section
 \section*{COMPÉTENCES}
 \begin{itemize}
-    \item \textbf{Cours complémentaires: } Phisique méchanique, Chimie générale, Chimie des solutions, Calcul Différentiel, Calcul Intégral, Algèbre Linéaire. 
-    \item \textbf{Programmation:} Java, Javascript, Vue, C\#, ASP.NET Core, Entity Framework Core
-    \item \textbf{Software: } Windows, Linux, Git, Microsoft Office, Azure DevOps, Monday.com
-    \item \textbf{Méthodologie de travail: } Traditional Procurement, Agile(scrum)
+    \item \textbf{Programmation:} Java, Javascript, C\#
+    \item \textbf{Software: } Windows, Linux, Git, Microsoft Office, Azure DevOps, Github
     \item \textbf{Communication:} Français (écrit \& parlé), Anglais (écrit \& parlé) % Communication skills
 \end{itemize}
 
 % End document
 \end{document}
-
