Align reference text in resume

--- a/resume.tex
+++ b/resume.tex
@@ -45,7 +45,7 @@ Baccalauréat intégré en mathématiques et informatique  \hfill \\
 \noindent
 \textbf{PHPCreation Inc.} \hfill 164 Rue Cowie #303, Granby, Québec J2G 3V3\\
 \textit{Stagiaire aux opérations} \hfill Janvier 2025 -- Décembre 2025\\
-\textit{Référence : } Simon Tremblay — (450) 776-5575
+\textit{Référence : } \hfill Simon Tremblay — (450) 776-5575
 
 \begin{itemize}
     \item Développement d’une suite de tests automatisés
